solve flickering bug

--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+#overlay {
+    display: none;
+}
 
 #canvas1 {
     background: url('./images/background.png');
@@ -11,13 +14,18 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
-#overlay {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    pointer-events: none;
-}
+
  #obstacles, #bull, #egg, #toad, #larva, #toads {
     display: none;
+ }
+
+ @media only screen and (min-width: 1280px){
+    #overlay {
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        pointer-events: none;
+    }
  }
